<resources>
    <string name="app_name">AppsTutorial</string>

    <string-array name="tutoriais">
        <item>Tutorial\nWhatsApp</item>
        <item>Tutorial\nInstagram</item>
        <item>Tutorial Uber</item>
        <item>Tutorial 99</item>
    </string-array>

    <string-array name="ano">
        <item>2021</item>
        <item>2021</item>
        <item>2021</item>
        <item>2021</item>
    </string-array>

    <string name="confirma"><b>CONFIRMAR</b></string>
    <string name="cancela"><b>CANCELAR</b></string>

    <string-array name="boas_vindas">
        <item>Bem-vindo ao tutorial de como usar o WhatsApp!</item>
        <item>Bem-vindo ao tutorial de como usar o Instagram!</item>
        <item>Bem-vindo ao tutorial de como usar o Uber!</item>
        <item>Bem-vindo ao tutorial de como usar o 99!</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main_activitynovenove">MainActivitynovenove</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_maps_uber">Map</string>
    <string name="nao_tem_conta">Não tem uma conta? Cadastre-se</string>
    <string name="email_nome">Digite seu e-mail ou nome de usuário</string>
    <string name="senha">Digite sua senha</string>
    <string name="title_activity_passageiro">PassageiroActivity</string>
    <string name="nome">Digite seu nome:</string>
    <string name="email">Digite seu e-mail:</string>
    <string name="title_activity_login_apps_tutorial">LoginActivityAppsTutorial</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_chat">ChatActivity</string>
</resources>