<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InstaActivity2">

    <EditText
        android:id="@+id/cmpusuario2"
        android:layout_width="347dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="#07000000"
        android:ems="10"
        android:hint="@string/email_nome"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/cmpsenha2"
        android:layout_width="347dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="#07000000"
        android:ems="10"
        android:hint="@string/senha"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cmpusuario2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:gravity="center_horizontal"
        android:text="Instagram"
        android:textColor="#000000"
        android:textSize="36sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.544"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.139" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Esqueceu seus dados de login?"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_entrar2" />

    <Button
        android:id="@+id/btn_entrar2"
        android:layout_width="347dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Entrar"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:backgroundTint="#1378C8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cmpsenha2" />

    <TextView
        android:id="@+id/txt_prox_tela"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/nao_tem_conta"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <include layout="@layout/botao_voltar_home"/>

</androidx.constraintlayout.widget.ConstraintLayout>